Solved issue with the index page having a horizontal scroll bar.

--- a/audio_od/static/css/index.css
+++ b/audio_od/static/css/index.css
@@ -4,7 +4,6 @@ body {
 
 #hero-slider {
 	position: relative;
-	width: 100vw;
 	overflow: hidden;
 }
 
